// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleCard.jsx component should match snapshots 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Card
    className="card with-image"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
>
    <CardHeader
        avatar={null}
        className="article-title"
        title="US submarine arrives in South Korea..."
    />
    <CardMedia>
        <img
            src="http://image-url/image.jpg"
        />
    </CardMedia>
    <CardText
        className="card-description"
    >
        It comes amid worries of a North Korean missile...
        <span
            className="read-more"
        >
            <a
                href="http://www.bbc.co.uk/news/world-asia-39701481"
            >
                 read more 
            </a>
        </span>
    </CardText>
    <CardActions
        className="card-actions"
    >
        <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Add to favourite articles"
            tooltipPosition="bottom-left"
            touch={true}
        >
            <ActionFavoriteBorder />
        </IconButton>
        &gt;
    </CardActions>
</Card>,
  "nodes": Array [
    <Card
      className="card with-image"
      expandable={false}
      expanded={null}
      initiallyExpanded={false}
>
      <CardHeader
            avatar={null}
            className="article-title"
            title="US submarine arrives in South Korea..."
      />
      <CardMedia>
            <img
                  src="http://image-url/image.jpg"
            />
      </CardMedia>
      <CardText
            className="card-description"
      >
            It comes amid worries of a North Korean missile...
            <span
                  className="read-more"
            >
                  <a
                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                  >
                         read more 
                  </a>
            </span>
      </CardText>
      <CardActions
            className="card-actions"
      >
            <IconButton
                  disableTouchRipple={false}
                  disabled={false}
                  iconStyle={Object {}}
                  onClick={[Function]}
                  tooltip="Add to favourite articles"
                  tooltipPosition="bottom-left"
                  touch={true}
            >
                  <ActionFavoriteBorder />
            </IconButton>
            &gt;
      </CardActions>
</Card>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ArticleCard
        article={
                Object {
                        "author": "BBC News",
                        "description": "It comes amid worries of a North Korean missile",
                        "publishedAt": "2017-04-25T02:59:53+00:00",
                        "title": "US submarine arrives in South Korea",
                        "url": "http://www.bbc.co.uk/news/world-asia-39701481",
                        "urlToImage": "http://image-url/image.jpg",
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ArticleCard {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "article": Object {
            "author": "BBC News",
            "description": "It comes amid worries of a North Korean missile",
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          },
        },
        "refs": Object {},
        "saveToFavouriteArticles": [Function],
        "state": Object {
          "favIcon": <ActionFavoriteBorder />,
          "tooltip": "Add to favourite articles",
          "value": Object {
            "author": "BBC News",
            "description": "It comes amid worries of a North Korean missile",
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          },
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Card
          className="card with-image"
          expandable={false}
          expanded={null}
          initiallyExpanded={false}
>
          <CardHeader
                    avatar={null}
                    className="article-title"
                    title="US submarine arrives in South Korea..."
          />
          <CardMedia>
                    <img
                              src="http://image-url/image.jpg"
                    />
          </CardMedia>
          <CardText
                    className="card-description"
          >
                    It comes amid worries of a North Korean missile...
                    <span
                              className="read-more"
                    >
                              <a
                                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                              >
                                         read more 
                              </a>
                    </span>
          </CardText>
          <CardActions
                    className="card-actions"
          >
                    <IconButton
                              disableTouchRipple={false}
                              disabled={false}
                              iconStyle={Object {}}
                              onClick={[Function]}
                              tooltip="Add to favourite articles"
                              tooltipPosition="bottom-left"
                              touch={true}
                    >
                              <ActionFavoriteBorder />
                    </IconButton>
                    &gt;
          </CardActions>
</Card>,
        "_debugID": 2,
        "_renderedOutput": <Card
          className="card with-image"
          expandable={false}
          expanded={null}
          initiallyExpanded={false}
>
          <CardHeader
                    avatar={null}
                    className="article-title"
                    title="US submarine arrives in South Korea..."
          />
          <CardMedia>
                    <img
                              src="http://image-url/image.jpg"
                    />
          </CardMedia>
          <CardText
                    className="card-description"
          >
                    It comes amid worries of a North Korean missile...
                    <span
                              className="read-more"
                    >
                              <a
                                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                              >
                                         read more 
                              </a>
                    </span>
          </CardText>
          <CardActions
                    className="card-actions"
          >
                    <IconButton
                              disableTouchRipple={false}
                              disabled={false}
                              iconStyle={Object {}}
                              onClick={[Function]}
                              tooltip="Add to favourite articles"
                              tooltipPosition="bottom-left"
                              touch={true}
                    >
                              <ActionFavoriteBorder />
                    </IconButton>
                    &gt;
          </CardActions>
</Card>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ArticleCard
    article={
        Object {
            "author": "BBC News",
            "description": "It comes amid worries of a North Korean missile",
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          }
    }
/>,
}
`;

exports[`ArticleCard.jsx component should match snapshots 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Card
    className="card with-image"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
>
    <CardHeader
        avatar={null}
        className="article-title"
        title="US submarine arrives in South Korea..."
    />
    <CardMedia>
        <img
            src="http://image-url/image.jpg"
        />
    </CardMedia>
    <CardText
        className="card-description"
    >
        No text available
        <span
            className="read-more"
        >
            <a
                href="http://www.bbc.co.uk/news/world-asia-39701481"
            >
                 read more 
            </a>
        </span>
    </CardText>
    <CardActions
        className="card-actions"
    >
        <IconButton
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Add to favourite articles"
            tooltipPosition="bottom-left"
            touch={true}
        >
            <ActionFavoriteBorder />
        </IconButton>
        &gt;
    </CardActions>
</Card>,
  "nodes": Array [
    <Card
      className="card with-image"
      expandable={false}
      expanded={null}
      initiallyExpanded={false}
>
      <CardHeader
            avatar={null}
            className="article-title"
            title="US submarine arrives in South Korea..."
      />
      <CardMedia>
            <img
                  src="http://image-url/image.jpg"
            />
      </CardMedia>
      <CardText
            className="card-description"
      >
            No text available
            <span
                  className="read-more"
            >
                  <a
                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                  >
                         read more 
                  </a>
            </span>
      </CardText>
      <CardActions
            className="card-actions"
      >
            <IconButton
                  disableTouchRipple={false}
                  disabled={false}
                  iconStyle={Object {}}
                  onClick={[Function]}
                  tooltip="Add to favourite articles"
                  tooltipPosition="bottom-left"
                  touch={true}
            >
                  <ActionFavoriteBorder />
            </IconButton>
            &gt;
      </CardActions>
</Card>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ArticleCard
        article={
                Object {
                        "author": "BBC News",
                        "description": null,
                        "publishedAt": "2017-04-25T02:59:53+00:00",
                        "title": "US submarine arrives in South Korea",
                        "url": "http://www.bbc.co.uk/news/world-asia-39701481",
                        "urlToImage": "http://image-url/image.jpg",
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ArticleCard {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "article": Object {
            "author": "BBC News",
            "description": null,
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          },
        },
        "refs": Object {},
        "saveToFavouriteArticles": [Function],
        "state": Object {
          "favIcon": <ActionFavoriteBorder />,
          "tooltip": "Add to favourite articles",
          "value": Object {
            "author": "BBC News",
            "description": null,
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          },
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Card
          className="card with-image"
          expandable={false}
          expanded={null}
          initiallyExpanded={false}
>
          <CardHeader
                    avatar={null}
                    className="article-title"
                    title="US submarine arrives in South Korea..."
          />
          <CardMedia>
                    <img
                              src="http://image-url/image.jpg"
                    />
          </CardMedia>
          <CardText
                    className="card-description"
          >
                    No text available
                    <span
                              className="read-more"
                    >
                              <a
                                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                              >
                                         read more 
                              </a>
                    </span>
          </CardText>
          <CardActions
                    className="card-actions"
          >
                    <IconButton
                              disableTouchRipple={false}
                              disabled={false}
                              iconStyle={Object {}}
                              onClick={[Function]}
                              tooltip="Add to favourite articles"
                              tooltipPosition="bottom-left"
                              touch={true}
                    >
                              <ActionFavoriteBorder />
                    </IconButton>
                    &gt;
          </CardActions>
</Card>,
        "_debugID": 4,
        "_renderedOutput": <Card
          className="card with-image"
          expandable={false}
          expanded={null}
          initiallyExpanded={false}
>
          <CardHeader
                    avatar={null}
                    className="article-title"
                    title="US submarine arrives in South Korea..."
          />
          <CardMedia>
                    <img
                              src="http://image-url/image.jpg"
                    />
          </CardMedia>
          <CardText
                    className="card-description"
          >
                    No text available
                    <span
                              className="read-more"
                    >
                              <a
                                        href="http://www.bbc.co.uk/news/world-asia-39701481"
                              >
                                         read more 
                              </a>
                    </span>
          </CardText>
          <CardActions
                    className="card-actions"
          >
                    <IconButton
                              disableTouchRipple={false}
                              disabled={false}
                              iconStyle={Object {}}
                              onClick={[Function]}
                              tooltip="Add to favourite articles"
                              tooltipPosition="bottom-left"
                              touch={true}
                    >
                              <ActionFavoriteBorder />
                    </IconButton>
                    &gt;
          </CardActions>
</Card>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ArticleCard
    article={
        Object {
            "author": "BBC News",
            "description": null,
            "publishedAt": "2017-04-25T02:59:53+00:00",
            "title": "US submarine arrives in South Korea",
            "url": "http://www.bbc.co.uk/news/world-asia-39701481",
            "urlToImage": "http://image-url/image.jpg",
          }
    }
/>,
}
`;
